# RIS-assisted-MIMO-system

./: README.md  setup.cfg
Documentation/: test.md
User_Location_RIS/: loc.py
tests/: test_loc.py
