[metadata]
name = User_Location_RIS
version = 0.0.1
author=Salah Berra
author_email=salahberra39@gmail.com
description = find the location users!
long_description = file: README.md, LICENSE
keywords = RIS, location, angle
license = MIT
url=https://github.com/salahberra/RIS-assited-MIMO-system.git

[options]
packages =
    User_Location_RIS
install_requires =
    numpy  # Not really required
    matplotlib # Not really required
[options.entry_points]
console_scripts =
    pyRIS = User_Location_RIS.loc:position
